CU-08 Eliminacion de socios
- Se creoo el caso de uso para eliminar un socio de la BD
- Se creo el controllador para enviar la solicitud
- Se creo el endpoint para eliminar un socio desde las rutas
- Se documento el metodo DELETE para socios en swagger
